# fshar

./: Cargo.toml  README.md
.github/workflows/: build.yml  post-release.yml
src/: command.rs  fshar_io.rs  main.rs  num_io.rs  receiver.rs  sender.rs
