[package]
name = "fshar"
version = "1.0.0"
authors = ["Kyryh donovkyrylo@gmail.com"]
license-file = "LICENSE"
description = "File sharing via TCP"
readme = "README.md"
homepage = "https://github.com/Kyryh/fshar"
repository = "https://github.com/Kyryh/fshar"
keywords = ["file", "sharing", "network"]
categories = ["command-line-utilities", "network-programming", "filesystem"]
edition = "2024"

[dependencies]
clap = "4.5.39"
